Update TGS_UrlParserPath.java